--- a/index.html
+++ b/index.html
@@ -131,6 +131,62 @@
                     </ul>
                 </div>
             </section>
+            <!--Постоянные клиенты-->
+            <section class="section clients-section">
+                <div class="container">
+                    <h2 class="clients-title">Постоянные клиенты</h2>
+                    <ul class="clients-list list">
+                        <li class="clients-item">
+                            <a href="" class="clients-link link" >
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client1">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client2">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client3">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client4">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client5">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link link">
+                                <svg class="clients-icon">
+                                    <use href="./images/sprite.svg#icon-client6">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <!--подвал-->
         <footer class="footer-block">
