--- a/index.html
+++ b/index.html
@@ -34,18 +34,32 @@
                         </li>
                     </ul>
                 </nav>
+                
                 <ul class="header-list list">
                     <li class="header-item">
-                        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="header-link link" href="mailto:info@devstudio.com">
+                           <svg class="header-icon envelope">
+                                <use href="./images/sprite.svg#icon-envelope">
+                                </use>
+                            </svg>
+                            info@devstudio.com
+                        </a>
                     </li>
                     <li class="header-item">
-                        <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="header-link link" href="tel:+380961111111">
+                            <svg class="header-icon smartphone">
+                                <use href="./images/sprite.svg#icon-smartphone">
+                                </use>
+                            </svg>
+                             +38 096 111 11 11
+                        </a>
                     </li>
                 </ul>
             </div>
         </header>
         <!-- Шапка или Hero-->
         <main>
+           
             <section class="hero-section">
                 <div class="container hero-container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -58,6 +72,12 @@
                 <h2 class="hidden">Особенности</h2>
                     <ul class="feature-list list">
                         <li class="feature-item">
+                            <div class="feature-icon-box">
+                                <svg class="feature-icon ">
+                                    <use href="./images/sprite.svg#icon-antenna">
+                                    </use>
+                                </svg>
+                            </div>
                             <h3 class="feature-item-title">Внимание к деталям</h3>
                             <p class="feature-text">
                                 Идейные соображения, а также  
@@ -66,6 +86,12 @@
                             </p>
                         </li>
                         <li class="feature-item">
+                            <div class="feature-icon-box">
+                                <svg class="feature-icon ">
+                                    <use href="./images/sprite.svg#icon-clock">
+                                    </use>
+                                </svg>
+                            </div>
                             <h3 class="feature-item-title">Пунктуальность</h3>
                             <p class="feature-text">
                                 Задача организации, в особенности  
@@ -74,6 +100,12 @@
                             </p>
                         </li>
                         <li class="feature-item">
+                            <div class="feature-icon-box">
+                                <svg class="feature-icon ">
+                                    <use href="./images/sprite.svg#icon-diagram">
+                                    </use>
+                                </svg>
+                            </div>
                             <h3 class="feature-item-title">Планирование</h3>
                             <p class="feature-text">
                                 Равным образом консультация с 
@@ -82,6 +114,12 @@
                             </p>
                         </li>
                         <li class="feature-item">
+                            <div class="feature-icon-box">
+                                <svg class="feature-icon ">
+                                    <use href="./images/sprite.svg#icon-astronaut">
+                                    </use>
+                                </svg>
+                            </div>
                             <h3 class="feature-item-title">Современные технологии</h3>
                             <p class="feature-text">
                                 Значимость этих проблем настолько
@@ -112,6 +150,35 @@
                             <img class="team-img" src="./images/team_card_1.jpg" alt="Игорь Демьяненко" width="270">
                             <h3 class="team-item-title">Игорь Демьяненко</h3>
                             <p class="team-text" lang="en">Product Designer</p>
+                            <div class="team-social">
+                                <ul class="team-social-list list">
+                                    <li class="team-social-item">
+                                        <svg class="team-social-icon ">
+                                            <use href="./images/sprite.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </li>
+                                    <li class="team-social-item">
+                                        <svg class="team-social-icon ">
+                                            <use href="./images/sprite.svg#icon-twitter">
+                                            </use>
+                                        </svg>
+                                    </li>
+                                    <li class="team-social-item" >
+                                        <svg class="team-social-icon ">
+                                            <use href="./images/sprite.svg#icon-facebook">
+                                            </use>
+                                        </svg>
+                                    </li>
+                                    <li class="team-social-item">
+                                        <svg class="team-social-icon ">
+                                            <use href="./images/sprite.svg#icon-linkedin">
+                                            </use>
+                                        </svg>
+                                    </li>
+                                </ul>
+
+                            </div>
                         </li>
                         <li class="team-item">
                             <img class="team-img" src="./images/team_card_2.jpg" alt="Ольга Репина" width="270">
@@ -205,6 +272,37 @@
                         </li>
                     </ul>
                 </address>
+                <div class="footer-social">
+                    <h3 class="footer-item-title">Присоединяйтесь</h3>
+                    <div class="team-social">
+                        <ul class="team-social-list list">
+                            <li class="team-social-item footer-social-item">
+                                <svg class="team-social-icon footer-icon ">
+                                    <use href="./images/sprite.svg#icon-instagram">
+                                    </use>
+                                </svg>
+                            </li>
+                            <li class="team-social-item footer-social-item">
+                                <svg class="team-social-icon footer-icon ">
+                                    <use href="./images/sprite.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </li>
+                            <li class="team-social-item footer-social-item ">
+                                <svg class="team-social-icon footer-icon ">
+                                    <use href="./images/sprite.svg#icon-facebook">
+                                    </use>
+                                </svg>
+                            </li>
+                            <li class="team-social-item footer-social-item ">
+                                <svg class="team-social-icon footer-icon  ">
+                                    <use href="./images/sprite.svg#icon-linkedin">
+                                    </use>
+                                </svg>
+                            </li>
+                        </ul>
+
+                </div>
             </div>
         </footer>
     </body>
