--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <a href="" class="logo link">Web<span class="header-logo">Studio</span></a>
                     <ul class="nav-section-list list">
                         <li class="nav-section-item">
-                            <a class="nav-section-link link " href="./index.html">Студия</a>
+                            <a class="nav-section-link link" href="./index.html">Студия</a>
                         </li>
                         <li class="nav-section-item">
                             <a class="nav-section-link link current" href="./portfolio.html">Портфолио</a>
@@ -35,12 +35,25 @@
                         </li>
                     </ul>
                 </nav>
+        
                 <ul class="header-list list">
                     <li class="header-item">
-                        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="header-link link" href="mailto:info@devstudio.com">
+                            <svg class="header-icon" width="16" height="12">
+                                <use href="./images/sprite.svg#icon-envelope">
+                                </use>
+                            </svg>
+                            info@devstudio.com
+                        </a>
                     </li>
                     <li class="header-item">
-                        <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="header-link link" href="tel:+380961111111">
+                            <svg class="header-icon" width="10" height="16">
+                                <use href="./images/sprite.svg#icon-smartphone">
+                                </use>
+                            </svg>
+                            +38 096 111 11 11
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -64,7 +77,7 @@
                     <h2 hidden>Проекты</h2>
                     <ul class="project-list list">
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-1.jpg" alt="Технокряк" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Технокряк</h3>
@@ -73,7 +86,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-2.jpg" alt="Постер" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
@@ -82,7 +95,7 @@
                             </a>
                         </li>
                         <li class="project-item" >
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-3.jpg" alt="Ресторан" width="370">
                                 <div class="project-content">   
                                     <h3 class="project-title" >Ресторан <span lang="en">Seafood</span> </h3>
@@ -91,7 +104,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-4.jpg" alt="Проект" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
@@ -100,7 +113,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-5.jpg" alt="Проект" width="370">
                                     <div class="project-content">
                                     <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
@@ -109,7 +122,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link"> 
+                            <a href="#" class="project-link link"> 
                                 <img class="project-img" src="./images/project-6.jpg" alt="Веб-сайт" width="370">
                                     <div class="project-content">
                                     <h3 class="project-title">Inspiration has no Borders</h3>
@@ -118,7 +131,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-7.jpg" alt="Издание" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Издание Limited Edition</h3>
@@ -127,7 +140,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-8.jpg" alt="Проект" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Проект LAB</h3>
@@ -136,7 +149,7 @@
                             </a>
                         </li>
                         <li class="project-item">
-                            <a href="#" class="link">
+                            <a href="#" class="project-link link">
                                 <img class="project-img" src="./images/project-9.jpg" alt="Приложение" width="370">
                                 <div class="project-content">
                                     <h3 class="project-title">Growing Business</h3>
@@ -149,23 +162,62 @@
             </section>
         </main>
         <!--подвал-->
-        <footer class="footer-block">
-            <div class="container">
-                <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
-                <address class="address-section">
-                    <ul class="address-list list">
-                        <li class="address-item">
-                            <a class="address-link link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
-                        </li>
-                        <li class="address-item">
-                            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                        <li class="address-item">
-                            <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-        </footer>
+            <footer class="footer-block">
+                <div class="container footer-container">
+                    <div class="footer-item">
+                        <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
+                        <address class="address-section">
+                            <ul class="address-list list">
+                                <li class="address-item">
+                                    <a class="address-link link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                                </li>
+                                <li class="address-item">
+                                    <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                                </li>
+                                <li class="address-item">
+                                    <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                                </li>
+                            </ul>
+                        </address>
+                    </div>
+                    <div class="footer-item">
+                        <h3 class="footer-item-title">Присоединяйтесь</h3>
+                        <ul class="footer-social-list list">
+                            <li class="footer-social-item">
+                                <a class="footer-social-link link" href="./" target="_blank" rel="noreferrer noopener">
+                                    <svg class="footer-social-icon footer-icon ">
+                                        <use href="./images/sprite.svg#icon-instagram">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a class="footer-social-link link" href="./" target="_blank" rel="noreferrer noopener">
+                                    <svg class="team-social-icon footer-icon ">
+                                        <use href="./images/sprite.svg#icon-twitter">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a class="footer-social-link link" href="./" target="_blank" rel="noreferrer noopener">
+                                    <svg class="team-social-icon footer-icon ">
+                                        <use href="./images/sprite.svg#icon-facebook">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a class="footer-social-link link" href="./" target="_blank" rel="noreferrer noopener">
+                                    <svg class="team-social-icon footer-icon  ">
+                                        <use href="./images/sprite.svg#icon-linkedin">
+                                        </use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
     </body>
 </html> 
